--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,8 @@
     name='viewport'
     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
 />
+
+<link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+>
